[package]
name = "bangbang"
version = "0.1.0"
authors = ["Sean Bruton <sean@uberfoo.net>"]
edition = "2018"
description = "bang-bang controller abstraction and reference implementation"
repository = "https://github.com/uber-foo/bangbang"
license = "MIT or Apache-2.0"
keywords = ["bangbang", "bang-bang", "bang bang", "on-off", "on off", "flipflop", "flip-flop", "flip flop"]

[dependencies]

[dependencies.log]
version = "0.4.5"
optional = true

[features]
default = ["on-off", "log"]
on-off = []
